--- a/projects.json
+++ b/projects.json
@@ -22,7 +22,7 @@
     "name": "comp",
     "description": "Gebruik de meer -comp",
     "status": "-",
-    "descriptionl": "wip"
+    "descriptionl": "<h1>Competenties</h1> <p></p>"
 
   }
 ]
