--- a/projects.json
+++ b/projects.json
@@ -2,9 +2,10 @@
 
   {
     "name": "sti",
-    "description": "Een o&o ontwerp opdracht voor STI engeneering. Het eindproduct is een 3d animatie van het eind ontwerp",
+    "description": "Een o&o ontwerp opdracht voor STI engeneering. Het eindproduct is een 3d animatie van het eind ontwerp ",
     "skils": "samenwerken, product ontwerp, 3d animatie ",
-    "status": "Klaar"
+    "status": "Klaar",
+    "descriptionl": "<h1>STI</h1> <p>STI is een O&O opdracht waarbij wij een ontwerp moesten maken voor STI engeneering. Hun probleem was  <br> De skils die ik heb gebruikt zijn: *Samenwerken *Product ontwerp *3d animatie </p>"
   },
   {
     "name": "doomsdayclicker",
@@ -16,13 +17,17 @@
     "name": "weer",
     "description": "Een custom weer app met de API van buienradar, je kan de website <a href='https://skelter-studio-s.github.io/weer-app/'>Hier</a> bezoeken",
     "status": "Completed",
-    "descriptionl": "<h1> Weer weer app</h1> <p>Deze website is gemaakt als opdracht voor informatica. Waar bij we javascript moeten gaan leren en een Weer app maken met de API van buienradar. Waar bij onze uitwerking een 10 van onze docent heeft gekregen</p> <p>Sils die ik heb gerbuikt tijdens deze opdracht. *Samenwerken. *Progameren HTLM CSS JS *Plannen  </p> "
+    "descriptionl": "<h1> Weer weer app</h1> <p>De Weer weer app is gemaakt als opdracht voor informatica. Waar bij we javascript moeten gaan leren en een Weer app maken met de API van buienradar. Waar bij onze uitwerking een 10 van onze docent heeft gekregen</p> <p>skils die ik heb gerbuikt tijdens deze opdracht. *Samenwerken. *Progameren HTLM CSS JS (Javascript) *Plannen  </p> "
   },
   {
     "name": "comp",
     "description": "Gebruik de meer -comp",
     "status": "-",
-    "descriptionl": "<h1>Competenties</h1> <p></p>"
+    "descriptionl": "<h1>Competenties</h1> <p>Zelf ben ik goed in probleem oplossend denken, even als samen werken. Als het nodig is kan je mij ook planning laten doen.<br> Ook ben ik zelf vrij creative, (hoe vaak heb je zo'n portofolio gezien?) <br> Probleemanalyse ben ik best wel goed in. Een ander aspect wat waar ik ook wel goed in ben is een gokje wagen met projecten en 'Going the next mile' met een project </p>"
 
+  },
+  {
+    "name": "ursem",
+    "description": "Een O&O opdracht waarbij wij een ruimtelijk probleem moetsen oplossen voor Ursem Modulaire Bouwsystemen <br> Beta werled was hier voor mobiliteit en ruimte"
   }
 ]
