--- a/projects.json
+++ b/projects.json
@@ -1,29 +1,27 @@
 [
-
   {
     "name": "sti",
     "description": "Een o&o ontwerp opdracht voor STI engeneering. Het eindproduct is een 3d animatie van het eind ontwerp ",
-    "skils": "samenwerken, product ontwerp, 3d animatie ",
     "status": "Klaar",
-    "descriptionl": "<h1>STI</h1> <p>STI is een O&O opdracht waarbij wij een ontwerp moesten maken voor STI engeneering. Hun probleem was  <br> De skils die ik heb gebruikt zijn: *Samenwerken *Product ontwerp *3d animatie </p>"
+    "descriptionl": "<h1>STI</h1> <p>STI is een O&O opdracht waarbij wij een ontwerp moesten maken voor STI engeneering. Hun probleem was dat ze niet opvallend genoeg waren voor op beursen waar ze naartoe wilde. en daarom voregen ze ons om advies, aangezien ze boten van 50+ meter maken, is het niet practies om een boot mee tenemen naar de beurs stand. Hier voor hadden ze al een oploosing bedacht, een 3d progamma waar in alles kan worden aan gepast zo dat de klant ziet wat word gekocht. Om dit beter te kunnen tonen hebben wij een inklapbare tavel gemaakt, en het concept hier van in een 3d animatie laten zien. <br> De skils die ik heb gebruikt zijn: *Samenwerken *Product ontwerp *3d animatie </p>"
   },
   {
     "name": "doomsdayclicker",
     "description": "Een game over het uit sterven van de aarde Zie deze link voor de game <a href='https://snap.berkeley.edu/project?username=thijmenvg&projectname=Doomsday%20clicker'>Hier</a>",
-    "skils": "samenwerken, Progameren, Game design",
-    "status": "Completed"
+    "status": "Klaar",
+    "descriptionl": "<h1>Doomsday clicker</h1> <p>Doomsday clicker is een game die ik heb gemaakt voor informatica. Het is een game waarbij je de aarde naar een ramp to helpt. De game is gemaakt in Snap! <br> De skils die ik heb gebruikt zijn: *Samenwerken *Progameren *Planning *Creatief denken *game design</p>"
   },
   {
     "name": "weer",
     "description": "Een custom weer app met de API van buienradar, je kan de website <a href='https://skelter-studio-s.github.io/weer-app/'>Hier</a> bezoeken",
-    "status": "Completed",
+    "status": "Klaar",
     "descriptionl": "<h1> Weer weer app</h1> <p>De Weer weer app is gemaakt als opdracht voor informatica. Waar bij we javascript moeten gaan leren en een Weer app maken met de API van buienradar. Waar bij onze uitwerking een 10 van onze docent heeft gekregen</p> <p>skils die ik heb gerbuikt tijdens deze opdracht. *Samenwerken. *Progameren HTLM CSS JS (Javascript) *Plannen  </p> "
   },
   {
     "name": "comp",
     "description": "Gebruik de meer -comp",
     "status": "-",
-    "descriptionl": "<h1>Competenties</h1> <p>Zelf ben ik goed in probleem oplossend denken, even als samen werken. Als het nodig is kan je mij ook planning laten doen.<br> Ook ben ik zelf vrij creative, (hoe vaak heb je zo'n portofolio gezien?) <br> Probleemanalyse ben ik best wel goed in. Een ander aspect wat waar ik ook wel goed in ben is een gokje wagen met projecten en 'Going the next mile' met een project </p>"
+    "descriptionl": "<h1>Competenties</h1> <p>Zelf ben ik goed in probleem oplossend denken, even als samen werken. Als het nodig is kan je mij ook planning laten doen.<br> Ook ben ik zelf vrij creative, (hoe vaak heb je zo'n portofolio gezien?) <br> Probleemanalyse ben ik best wel goed in. Ook ben ik goed in het maken van bijzondere oplossingen en 'Going the next mile' met een project om er voor te zorgen dat het eind resultaat goed is. </p>"
 
   },
   {
