--- a/projects.json
+++ b/projects.json
@@ -28,6 +28,6 @@
     "name": "ursem",
     "description": "Een O&O opdracht waarbij wij een ruimtelijk probleem moetsen oplossen voor Ursem Modulaire Bouwsystemen <br> Beta werled was hier voor mobiliteit en ruimte",
     "status": "Klaar",
-    "descriptionl": "<h1>Ursem Modulaire Bouwsystemen</h1> <p>Ursem Modulaire Bouwsystemen is een O&O opdracht waarbij wij een oplossing moesten bedenken voor het opslaan van hun woon modules, hier van worden er 3 perdag gemaakt en soms wel 30 op 1 dag af gehaald. Om dit beter te laten gaan hebben zij ons benaderd met de vraag voor een oplossing. <br> skills die ik bij deze opdracht heb gebruikt zijn *leiding geven *probleem oplossend denken, *Probleemanalyse *Presenteren.  </p>"
+    "descriptionl": "<h1>Ursem Modulaire Bouwsystemen</h1> <p>Ursem Modulaire Bouwsystemen is een O&O opdracht waarbij wij een oplossing moesten bedenken voor het opslaan van hun woon modules, hier van worden er 3 perdag gemaakt en soms wel 30 op 1 dag af gehaald. Om dit beter te laten gaan hebben zij ons benaderd met de vraag voor een oplossing. <br> skills die ik bij deze opdracht heb gebruikt zijn *leiding geven *probleem oplossend denken, *Probleemanalyse *Presenteren. <br> betawereld:  mobiliteit en ruimte.  </p>"
   }
 ]
